<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2022 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Todo</string>
    <string name="add_task">New Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="task_marked_complete">Task marked complete</string>
    <string name="task_marked_active">Task marked active</string>
    <string name="loading_tasks_error">Error while loading tasks</string>
    <string name="completed_tasks_cleared">Completed tasks cleared</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_clear">Clear completed</string>
    <string name="menu_search">Search</string>
    <string name="menu_delete_task">Delete task</string>
    <string name="navigation_view_header_title">Todo</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Enter your task here.</string>
    <string name="empty_task_message">Tasks cannot be empty</string>
    <string name="successfully_saved_task_message">Task saved</string>
    <string name="list_title">Task List</string>
    <string name="statistics_title">Statistics</string>
    <string name="statistics_no_tasks">You have no tasks.</string>
    <string name="statistics_active_tasks">Active tasks: %.1f%%</string>
    <string name="statistics_completed_tasks">Completed tasks: %.1f%%</string>
    <string name="no_data">No data</string>
    <string name="loading">LOADING</string>

    <string name="nav_all">All</string>
    <string name="nav_active">Active</string>
    <string name="nav_completed">Completed</string>
    <string name="label_all">All Tasks</string>
    <string name="label_active">Active Tasks</string>
    <string name="label_completed">Completed Tasks</string>
    <string name="no_tasks_all">You have no tasks!</string>
    <string name="no_tasks_active">You have no active tasks!</string>
    <string name="no_tasks_completed">You have no completed tasks!</string>
    <string name="refresh">Refresh</string>
    <string name="successfully_deleted_task_message">Task was deleted</string>
    <string name="successfully_added_task_message">Task added</string>
    <string name="no_data_description" />

    <!-- Content Descriptions -->
    <string name="tasks_header_image_content_description">Tasks header image</string>
    <string name="no_tasks_image_content_description">No tasks image</string>
</resources>
